// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerProvider should hide the drawer on clicking close button 1`] = `
<div>
  <div>
    child
  </div>
</div>
`;

exports[`DrawerProvider should open drawer component on calling open drawer with drawer state 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div>
    child
  </div>
</div>
`;

exports[`DrawerProvider should render children 1`] = `
<div>
  <div>
    child
  </div>
</div>
`;
